--- a/package.json
+++ b/package.json
@@ -18,12 +18,17 @@
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
+    "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.3",
+    "node-cache": "^5.1.2",
+    "node-geocoder": "^4.4.1",
     "nodemailer": "^8.0.1",
+    "p-limit": "^7.3.0",
     "puppeteer": "^24.37.3",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "winston": "^3.19.0"
   }
 }
